# opengl-proj

./: .gitignore  CMakeLists.txt  proj.sh
src/: game.h  main.cpp
src/engine/: render_system.cpp  render_system.hpp  resource_manager.cpp  resource_manager.hpp  shader_manager.cpp  shader_manager.hpp  texture_manager.cpp  texture_manager.hpp  types.hpp
src/engine/common/: objloader.cpp  objloader.hpp
src/engine/core/: ecs.hpp  render_system.hpp  transform_system.hpp
src/engine/core/components/: camera.hpp  keyinput.hpp  renderable.hpp  transform.hpp
